# network_manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audit_commands.rs  config_commands.rs  llm_commands.rs  mod.rs  port_commands.rs  service_commands.rs  system_commands.rs
src-tauri/src/llm/: analyzer.rs  client.rs  mod.rs
src-tauri/src/models/: audit.rs  config.rs  mod.rs  port.rs  service.rs
src-tauri/src/services/: manager.rs  mod.rs  monitor.rs  security_scanner.rs  system_stats.rs
src-tauri/src/services/control/: docker_control.rs  launchd_control.rs  mod.rs  process_control.rs  systemd_control.rs  traits.rs  windows_control.rs
src-tauri/src/services/discovery/: docker.rs  launchd.rs  mod.rs  process.rs  systemd.rs  traits.rs  windows_service.rs
src-tauri/src/services/port/: mod.rs  resolver.rs  scanner.rs
src-tauri/src/services/security/: audit.rs  encryption.rs  mod.rs
src/components/dashboard/: Recommendations.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/services/: ResourceBar.tsx  ServiceInfoButton.tsx
src/components/ui/: badge.tsx  switch.tsx
src/lib/hooks/: index.ts  usePorts.ts  useRealtime.ts  useServices.ts
src/pages/: Dashboard.tsx  Logs.tsx  Performance.tsx  Ports.tsx  Security.tsx  Services.tsx  Settings.tsx
src/stores/: portStore.ts  serviceStore.ts  uiStore.ts
(+2 files in other folders)
