[package]
name = "network-manager"
version = "0.1.0"
description = "Cross-platform service and network management application"
authors = ["Erik Schroder"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "network_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Docker API
bollard = "0.19"

# System information
sysinfo = "0.33"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# Database for audit logs
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }

# Configuration encryption
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
whoami = "1"
rand = "0.8"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_System_Services", "Win32_Security", "Win32_Foundation"] }

